--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,11 +6,30 @@ date: 2021-03-19
 
 # Ezra Kaba
 
-Hey, I'm a Student persuing Software Engineer at Africa university. I enjoy working with Next.js and crafting beautiful front-end experiences.
+Me in 10 seconds
+I’ve been a [**learner**](https://google.com/)
+I try to [**visualize**](https://google.com/) a better future
+Nairobi native, I now [**study**](https://google.com/) in Zimbabwe.
+I'm a Student persuing Software Engineer at Africa university. I enjoy working with Next.js and crafting beautiful front-end experiences.
 
-This portfolio is built with **Next.js** and a _library_ called [Nextra](https://nextra.vercel.app/). _
+## Me in 10 minutes?
+See my [“about”](https://www.notion.so/About-9355ca02c8b64396aed65cd03749183b?pvs=21) page.
 
-[**Deploy your own**](https://vercel.com/) in a few minutes.
+## What am I doing now?
+See [“now”](https://www.notion.so/Now-db7c269b9a4a4c9dbaaf9c75f8c5edc3?pvs=21) page.
+
+## Contact me
+I love meeting new people, and I reply to every email, so [say hello](https://www.notion.so/resume-ba0cee2a8efb41eb81708af8367cced3?pvs=21).
+
+**Projects**
+[Tech Independence](https://www.notion.so/Tech-Independence-ce15323a79d14f03b6b7c25aa893411e?pvs=21) Instructions to set up your own server and break dependency on the cloud
+[Book Notes](https://www.notion.so/8d60245d6b1d41c1a811a5acf8a9a2f2?pvs=21) detailed notes from the last 360+ books I’ve read
+
+## Tools I use?
+See my [“uses”](https://www.notion.so/Tools-442a89dbaf764fa2b20efc4315b558d4?pvs=21) page.
+
+## Podcast
+nextjs/nextra
 
 ---
 
