--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,11 +6,12 @@ date: 2021-03-19
 
 # Ezra Kaba
 
-Me in 10 seconds
-I’ve been a [**learner**](https://google.com/)
+**Me in 10 seconds**
+
+I'm a Student persuing Software Engineer at Africa university.
+My [**resume**](https://notion.so/)
 I try to [**visualize**](https://google.com/) a better future
 Nairobi native, I now [**study**](https://google.com/) in Zimbabwe.
-I'm a Student persuing Software Engineer at Africa university. I enjoy working with Next.js and crafting beautiful front-end experiences.
 
 ## Me in 10 minutes?
 See my [about](https://www.notion.so/About-9355ca02c8b64396aed65cd03749183b?pvs=21) page.
