--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -8,9 +8,9 @@ date: 2021-03-19
 
 ## Me in 10 seconds
 
-I'm a Student persuing Software Engineer at Africa university.
-My [**resume**](https://notion.so/). I am a Nairobi native, I now [**study**](https://google.com/) in Zimbabwe.
-I try to [**visualize**](https://google.com/) a better future
+I'm a Student persuing Software Engineering at Africa university.
+My [**resume**](https://www.notion.so/paza/resume-ba0cee2a8efb41eb81708af8367cced3?pvs=4). I am a Nairobi native, I now [**study**](https://google.com/) in Zimbabwe.
+I try to [**visualize**](https://www.notion.so/paza/Vision-81462fcdf1bc455fa4889510930e0915?pvs=4) a better future
 
 ## Me in 10 minutes?
 
