--- a/pages/photos.mdx
+++ b/pages/photos.mdx
@@ -11,7 +11,7 @@ Here's some of my photography.
 import Image from 'next/image'
 
 <Image
-  src="/images/photo2.jpg"
+  src="/images/22.jpeg"
   alt="Photo"
   width={1125}
   height={750}
@@ -21,7 +21,7 @@ import Image from 'next/image'
 [Unsplash ↗ ](https://unsplash.com/photos/WeYamle9fDM)
 
 <Image
-  src="/images/photo.jpg"
+  src="/images/33.jpeg"
   alt="Photo"
   width={1125}
   height={750}
